[tool.poetry]
name = "dash-in-docker"
version = "0.1.0"
description = "Dockerized Plolty Dash app which uses Redis for caching and storage and Nginx for serving front end."
authors = ["Snehil Vijay <snehilvj@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.3.1"
dash-mantine-components = "^0.7.0"
Flask-Caching = "^1.10.1"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
